@@ -110,15 +110,15 @@ class Entity implements DTDConstants {
     static Hashtable entityTypes = new Hashtable();
 
     static {
-        entityTypes.put("PUBLIC", new Integer(PUBLIC));
-        entityTypes.put("CDATA", new Integer(CDATA));
-        entityTypes.put("SDATA", new Integer(SDATA));
-        entityTypes.put("PI", new Integer(PI));
-        entityTypes.put("STARTTAG", new Integer(STARTTAG));
-        entityTypes.put("ENDTAG", new Integer(ENDTAG));
-        entityTypes.put("MS", new Integer(MS));
-        entityTypes.put("MD", new Integer(MD));
-        entityTypes.put("SYSTEM", new Integer(SYSTEM));
+        entityTypes.put("PUBLIC", Integer.valueOf(PUBLIC));
+        entityTypes.put("CDATA", Integer.valueOf(CDATA));
+        entityTypes.put("SDATA", Integer.valueOf(SDATA));
+        entityTypes.put("PI", Integer.valueOf(PI));
+        entityTypes.put("STARTTAG", Integer.valueOf(STARTTAG));
+        entityTypes.put("ENDTAG", Integer.valueOf(ENDTAG));
+        entityTypes.put("MS", Integer.valueOf(MS));
+        entityTypes.put("MD", Integer.valueOf(MD));
+        entityTypes.put("SYSTEM", Integer.valueOf(SYSTEM));
     }
 
     /**
